gcc/testsuite/rust/compile/doc_isolated_cr_inner_line_comment.rs
#![feature(no_core)]
#![no_core]

pub fn main ()
{
// { dg-error "Isolated CR" "" { target *-*-* } .+1 }
  //! doc cr comment
}
